# GUI_Horarios

./: README.md  csv_file.csv  csv_ordinario.csv  main.spec  pyproject.toml
scripts/: color_window.py  print_widget.py
src/: add_class.py  add_files.py  convertion.py  csv_file.csv  intro.py  intro.ui  main.py  main_modify.py  modify.py  professors.py  subjects.py
src/modify_screens/: add_class.py  visualize.py
src/parameters/: config.ini
src/tools/: convertion.py
src/ui_files/: add_class.ui  add_files.ui  intro.ui  main.ui  main_modify.ui  professors.ui  schedule_grid.ui  subjects.ui
