[tool.poetry]
name = "gui-horarios"
version = "0.1.0"
description = "GUI for schedule handle"
authors = ["Cornelio Posadas P <posadascornelio38@gmail.com>"]
readme = "README.md"
packages = [{include = "gui_horarios"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = "^5.15.9"
pandas = "^1.5.3"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
